--- a/first_project/src/app/newone/newone.component.css
+++ b/first_project/src/app/newone/newone.component.css
@@ -6,7 +6,7 @@
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
   }
-  .hey{
+  .hello{
     display: flex;
     align-items: left;
     justify-content: left;
