--- a/first_project/src/app/goshopping/goshopping.component.html
+++ b/first_project/src/app/goshopping/goshopping.component.html
@@ -1,17 +1,18 @@
 <div class="row row-cols-1  row row-cols-3 ">
-    <div class="col-mb-4" *ngFor="let card of cards">
-        <mat-card class="example-card">
-            <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title>{{card.Title}}</mat-card-title>
-            </mat-card-header>
-            <img mat-card-image src="{{card.image}}">
-            <mat-card-content>
-                <p>
-                    cost:{{card.cost}} <br>
-                    description:{{card.description}}
-                </p>
-            </mat-card-content>
-        </mat-card>
-    </div>
+<div class="col-mb-4" *ngFor="let card of cards |async"> 
+    <mat-card class="example-card"> 
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>{{card.Title}}</mat-card-title>
+        </mat-card-header>
+        <img mat-card-image src="{{card.image}}"> 
+         <mat-card-content>
+            <p>
+           cost:{{card.cost}} <br>
+            description:{{card.description}}
+            </p>
+        </mat-card-content>
+    </mat-card>
 </div>
+</div>    
+    
