--- a/first_project/src/app/header/header.component.html
+++ b/first_project/src/app/header/header.component.html
@@ -20,7 +20,7 @@
         <mat-card>
             <mat-card-header class="card">
                 <mat-divider> </mat-divider>
-                <mat-card-title>{{a}}</mat-card-title>
+                <mat-card-title>{{userName}}</mat-card-title>
             </mat-card-header>
             <mat-divider> </mat-divider>
             <mat-card-content>{{email}}</mat-card-content>
@@ -34,8 +34,21 @@
     <mat-sidenav #snav mode="side">
         <mat-nav-list class="mybutton">
             <a mat-list-item appHighlight background="orange" routerLink="/mat-table" (click)="snav.toggle()">Order</a>
-            <a mat-list-item appHighlight background="pink" routerLink="/goshopping"
-                (click)="snav.toggle()">goshopping</a>
+        
+                <mat-accordion appHighlight background="pink">
+                    <mat-expansion-panel >
+                      <mat-expansion-panel-header>
+                        <mat-panel-title>
+                           goshopping  
+                        </mat-panel-title>
+                        
+                      </mat-expansion-panel-header>
+                      <p> <a mat-list-item appHighlight background="orange" routerLink="/goshopping/Clothes" (click)="snav.toggle()">Clothes</a></p>
+                      <p> <a mat-list-item appHighlight background="pink"   routerLink="/goshopping/Cosmetic"(click)="snav.toggle()">Cosmetic</a></p>
+                      <p> <a mat-list-item appHighlight background="yellow" routerLink="/goshopping/Grocery" (click)="snav.toggle()">Grocery </a></p> 
+                    </mat-expansion-panel>  
+                </mat-accordion>    
+              
             <a mat-list-item appHighlight background="violet" routerLink="/wishlist"
                 (click)="snav.toggle()">wishlist</a>
             <a mat-list-item appHighlight background="yellow" routerLink="/" (click)="snav.toggle()"
