--- a/first_project/src/app/mat-table/mat-table.component.html
+++ b/first_project/src/app/mat-table/mat-table.component.html
@@ -1,6 +1,5 @@
 <div>
-
-  <table mat-table [dataSource]="dataSource |async" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="no">
       <th mat-header-cell *matHeaderCellDef> No </th>
       <td mat-cell *matCellDef="let element"> {{element.no}} </td>
@@ -49,12 +48,13 @@
         <button (click)="favo(element)">
           <mat-icon>{{element.selected ? 'star' : 'star_outline'}}</mat-icon>
         </button>
+
+
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    <!-- <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="hello(row.id)"></tr> -->
   </table>
 
   <mat-paginator [length]="50" [pageSize]="10" [pageSizeOptions]="[5, 10, 25]" aria-label="Select page">
